# csv_graph_viewer

./: CMakeLists.txt  README.md  config.json  gen_data.py  main.cpp
data/: test.csv
gui/: plot_window.cpp  plot_window.hpp
include/: types.hpp
io/: csv_loader.cpp  csv_loader.hpp  json_loader.cpp  json_loader.hpp
